label alignment resolved

--- a/style.css
+++ b/style.css
@@ -22,11 +22,8 @@ body {
 #ui .label {
 	position:fixed;
 	width:200px;
-	height:200px;
-	left:2%;
 	color:#fff;
 	font-family:"Helvetica","Arial",sans-serif;
-	/*font-size:72px;*/
 	font-weight:bold;
 	text-align:center;
 	text-transform:uppercase;
